--- a/task_manager/templates/task_manager/task_confirm_delete.html
+++ b/task_manager/templates/task_manager/task_confirm_delete.html
@@ -3,12 +3,11 @@
 {% block content %}
   <div class="row">
     <div class="col-12">
-      <form action="" method="post">
+      <h1>Delete Task</h1>
+      <p>Are you sure you want to delete the task: {{ task }}?</p>
+      <form action="" method="POST">
         {% csrf_token %}
-        <table>
-        {{ form.as_table }}
-        </table>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Yes, delete.">
       </form>
     </div>
   </div>
