--- a/task_manager/static/task_manager/css/main.css
+++ b/task_manager/static/task_manager/css/main.css
@@ -2,14 +2,23 @@ body {
     background-color: #424240;
     color: white;
 }
+h1, h2 {
+    text-align: center;
+}
 .bg-scheduler {
-    background-color: #00a161;
+    background-color: #00a161 !important;
+}
+.bg-scheduler-dark {
+    background-color: #424240 !important;
+}
+.c-scheduler {
+    color: #00a161 !important;
+}
+.c-scheduler-dark {
+    color: #424240 !important;
 }
 .dropdown-menu {
     background-color: #424240;
-    border: #00a161;
-    border-style: solid;
-    border-width: 2px;
 }
 .dropdown-item {
     color: #00a161;
@@ -17,6 +26,7 @@ body {
 a.dropdown-item:hover {
     background-color: #424240;
 }
-h1 {
-    text-align: center;
+a.dropdown-item:focus {
+    background-color: #424240;
+    color: #00a161;
 }
