--- a/task_manager/templates/task_manager/index.html
+++ b/task_manager/templates/task_manager/index.html
@@ -3,7 +3,14 @@
 {% block content %}
   <div class="row">
     <div class="col-12">
-      <h1>Welcome Foolish Creatures</h1>
+      <h1 class="mt-5">Welcome {{ request.user.username }}!</h1>
+    </div>
+    <div class="col-12">
+      <a class="btn mt-5 cs-scheduler btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">See Your Tasks</a>
+    </div>
+    <div class="col-12">
+      <h2 class="mt-5">Summary</h2>
+      <p>You have {{ request.user.task_set.count }} tasks on-going</p>
     </div>
   </div>
 {% endblock %}
