--- a/scheduler/templates/auth/user_form.html
+++ b/scheduler/templates/auth/user_form.html
@@ -5,10 +5,13 @@
     <div class="col-12">
       <form action="" method="post">
         {% csrf_token %}
-        <table>
-        {{ form.as_table }}
-        </table>
-        <input type="submit" value="Submit">
+        {% for field in form %}
+          <div class="form-group">
+            {{ field.label_tag }}
+            {{ field }}
+          </div>
+        {% endfor %}
+        <button type="submit" class="btn mb-3 bg-scheduler">Submit</button>
       </form>
     </div>
   </div>
