--- a/scheduler/templates/registration/login.html
+++ b/scheduler/templates/registration/login.html
@@ -8,28 +8,26 @@
       {% endif %}
 
       {% if next %}
-          {% if user.is_authenticated %}
-          <p>Your account doesn't have access to this page. To proceed,
-          please login with an account that has access.</p>
-          {% else %}
-          <p>Please login to see this page.</p>
-          {% endif %}
+        {% if user.is_authenticated %}
+        <p>Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</p>
+        {% else %}
+        <p>Please login to see this page.</p>
+        {% endif %}
       {% endif %}
 
       <form method="post" action="{% url 'login' %}">
-      {% csrf_token %}
-      <table>
-      <tr>
-          <td>{{ form.username.label_tag }}</td>
-          <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-          <td>{{ form.password.label_tag }}</td>
-          <td>{{ form.password }}</td>
-      </tr>
-      </table>
+        {% csrf_token %}
+        <div class="form-group">
 
-      <input type="submit" value="login">
+          {{ form.username.label_tag }}
+          <input class="form-control bg-scheduler-dark" id="{{ form.username.if_for_label }}" type="text" name="{{ form.username.html_name }}" maxlength="20" required>
+        </div>
+        <div class="form-group">
+          {{ form.password.label_tag }}
+          <input class="form-control bg-scheduler-dark" id="{{ form.password.if_for_label }}" type="password" name="{{ form.password.html_name }}" required>
+        </div>
+      <button type="submit" class="btn mb-3 bg-scheduler">Login</button>
       <input type="hidden" name="next" value="{{ next }}">
       </form>
 
