--- a/task_manager/templates/task_manager/task_form.html
+++ b/task_manager/templates/task_manager/task_form.html
@@ -6,12 +6,11 @@
       <form action="" method="post">
         {% csrf_token %}
         {% for field in form %}
-          <div class="form-group mt-1">
+          <div class="form-group">
             {{ field.label_tag }}
             {{ field }}
           </div>
         {% endfor %}
-
         <button type="submit" class="btn mb-3 bg-scheduler">Submit</button>
       </form>
     </div>
