--- a/task_manager/templates/task_manager/task_list.html
+++ b/task_manager/templates/task_manager/task_list.html
@@ -6,7 +6,7 @@
       {% if task_list %}
         <div class="list-group">
           {% for task in task_list %}
-            <a class="list-group-item mt-3 bg-scheduler list-group-item-action" href="{{ task.get_absolute_url }}">
+            <a class="list-group-item mb-3 bg-scheduler list-group-item-action" href="{{ task.get_absolute_url }}">
               <div class="d-flex w-100 justify-content-between">
                 <h5 class="mb-1">{{ task.name }}</h5>
                 <small>{{ task.due_date }}</small>
