--- a/task_manager/templates/task_manager/task_list.html
+++ b/task_manager/templates/task_manager/task_list.html
@@ -1,24 +1,20 @@
 {% extends "task_manager/base_generic.html" %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-12">
-      {% if task_list %}
-        <div class="list-group">
-          {% for task in task_list %}
-            <a class="list-group-item mb-3 bg-scheduler list-group-item-action" href="{{ task.get_absolute_url }}">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">{{ task.name }}</h5>
-                <small>{{ task.due_date }}</small>
-              </div>
-              <p class="mb-1">{{ task.description }}</p>
-              <small class="{% if task.priority == 'h' %}text-warning{% elif task.priority == 'n' %}text-body{% else %}text-muted{% endif %}">{{ task.get_priority_display }}</small>
-            </a>
-          {% endfor %}
-        </div>
-      {% else %}
-        <p>You haven't added any task yet.</p>
-      {% endif %}
+  {% if task_list %}
+    <div class="list-group">
+      {% for task in task_list %}
+        <a class="list-group-item mb-3 bg-scheduler list-group-item-action" href="{{ task.get_absolute_url }}">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">{{ task.name }}</h5>
+            <small>{{ task.due_date }}</small>
+          </div>
+          <p class="mb-1">{{ task.description }}</p>
+          <small class="{% if task.priority == 'h' %}text-warning{% elif task.priority == 'n' %}text-body{% else %}text-muted{% endif %}">{{ task.get_priority_display }}</small>
+        </a>
+      {% endfor %}
     </div>
-  </div>
+  {% else %}
+    <p class="text-center">You haven't added any task yet</p>
+  {% endif %}
 {% endblock %}
