--- a/task_manager/templates/task_manager/base_generic.html
+++ b/task_manager/templates/task_manager/base_generic.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'task_manager/bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'task_manager/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'task_manager/css/input_form.css' %}">
-    <link rel="stylesheet" href="{% static 'task_manager/css/social_icons.css' %}">
+    <link rel="stylesheet" href="{% static 'task_manager/css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'task_manager/fontello/css/fontello.css' %}">
     <title>Scheduler</title>
     <meta name="description" content="">
@@ -21,7 +21,7 @@
     <![endif]-->
   </head>
   <body>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar navbar-light bg-scheduler navbar-expand-lg">
         <a class="navbar-brand" href="{% url 'task_manager:index' %}"><img class="d-inline-block mr-1 align-bottom" src="{% static 'task_manager/images/logo.png' %}" width="30" height="30" alt="logo"> Scheduler</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Navigation toggler">
@@ -39,9 +39,19 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false" id="submenu" aria-haspopup="true">Manage tasks</a>
                 <div class="dropdown-menu" aria-labelledby="submenu">
-                    <a class="dropdown-item" href="{% url 'task_manager:task-create' %}">Create new</a>
-                    <a class="dropdown-item" href="#">Delete</a>
-                    <a class="dropdown-item" href="#">Mark done</a>
+                  <a class="dropdown-item" href="{% url 'task_manager:task-create' %}">Create new</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'task_manager:inactive-yet' %}">Delete</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'task_manager:inactive-yet' %}">Mark done</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false" id="submenu" aria-haspopup="true">About</a>
+                <div class="dropdown-menu" aria-labelledby="submenu">
+                  <a class="dropdown-item" href="{% url 'task_manager:inactive-yet' %}">Scheduler</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'task_manager:inactive-yet' %}">Other projects</a>
                 </div>
               </li>
               <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
@@ -53,43 +63,17 @@
     </header>
 
     <main>
-      <div class="container mt-3">
+      <div class="container mt-3 min-vh-100">
         {% block content %}{% endblock %}
       </div>
     </main>
 
-{#    <footer>#}
-{#      <div class="socials">#}
-{#        <div class="socialdivs">#}
-{#          <div class="fb">#}
-{#            <i class="icon-facebook"></i>#}
-{#          </div>#}
-{#          <div class="yt">#}
-{#            <i class="icon-youtube"></i>#}
-{#          </div>#}
-{#          <div class="tw">#}
-{#            <i class="icon-twitter"></i>#}
-{#          </div>#}
-{#          <div class="gplus">#}
-{#            <i class="icon-gplus"></i>#}
-{#          </div>#}
-{#          <div style="clear:both"></div>#}
-{#        </div>#}
-{#      </div>#}
-{#      <div class="info">#}
-{#        All rights reserved &copy; 2020 Thank you for visit!#}
-{#      </div>#}
-{#    </footer>#}
-
-    <footer class="fixed-bottom ">
-      <div class="row">
-        <div class="col-12">
-          <div class="d-flex justify-content-between bg-scheduler">
-            <div class="fb text-center w-50"><i class="icon-facebook-official"></i></div>
-            <div class="ig text-center w-50"><i class="icon-instagram"></i></div>
-          </div>
-        </div>
+    <footer class="mb-0 p-0">
+      <div class="d-flex justify-content-between bg-scheduler">
+        <div class="fb text-center w-50"><i class="icon-facebook-official"></i></div>
+        <div class="ig text-center w-50"><i class="icon-instagram"></i></div>
       </div>
+      <p class="text-center text-muted mb-0 bg-scheduler">All rights reserved &copy; 2020 Thank you for visit!</p>
     </footer>
 
     <!-- Optional JavaScript -->
