Editet site templates

--- a/scheduler/templates/auth/user_form.html
+++ b/scheduler/templates/auth/user_form.html
@@ -15,7 +15,7 @@
             {% endfor %}
           </div>
         {% endfor %}
-        <button type="submit" class="btn mb-3 bg-scheduler">Submit</button>
+        <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Submit</button>
       </form>
     </div>
   </div>
