--- a/scheduler/templates/registration/login.html
+++ b/scheduler/templates/registration/login.html
@@ -31,7 +31,7 @@
             <small class="text-danger">{{ error }}</small>
           {% endfor %}
         </div>
-      <button type="submit" class="btn mb-3 bg-scheduler">Login</button>
+      <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Login</button>
       <input type="hidden" name="next" value="{{ next }}">
       </form>
 
