--- a/task_manager/templates/task_manager/task_form.html
+++ b/task_manager/templates/task_manager/task_form.html
@@ -9,6 +9,6 @@
         {{ field }}
       </div>
     {% endfor %}
-    <button type="submit" class="btn mb-3 bg-scheduler">Submit</button>
+    <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Submit</button>
   </form>
 {% endblock %}
