--- a/task_manager/static/task_manager/fontello/css/fontello-codes.css
+++ b/task_manager/static/task_manager/fontello/css/fontello-codes.css
@@ -1,3 +1,4 @@
 
+.icon-github-circled:before { content: '\f09b'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
-.icon-facebook-official:before { content: '\f230'; } /* '' */
+.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
