--- a/task_manager/static/task_manager/fontello/css/fontello.css
+++ b/task_manager/static/task_manager/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?45300109');
-  src: url('../font/fontello.eot?45300109#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?45300109') format('woff2'),
-       url('../font/fontello.woff?45300109') format('woff'),
-       url('../font/fontello.ttf?45300109') format('truetype'),
-       url('../font/fontello.svg?45300109#fontello') format('svg');
+  src: url('../font/fontello.eot?98874859');
+  src: url('../font/fontello.eot?98874859#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?98874859') format('woff2'),
+       url('../font/fontello.woff?98874859') format('woff'),
+       url('../font/fontello.ttf?98874859') format('truetype'),
+       url('../font/fontello.svg?98874859#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?45300109#fontello') format('svg');
+    src: url('../font/fontello.svg?98874859#fontello') format('svg');
   }
 }
 */
@@ -42,10 +42,10 @@
  
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  margin-left: .2em;
+  /*margin-left: .2em;*/
  
   /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
+   font-size: 200%;
  
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
@@ -55,5 +55,6 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-instagram:before { content: '\f16d'; font-size: 40px; color: #191d21; } /* '' */
-.icon-facebook-official:before { content: '\f230'; font-size: 40px; color: #191d21; } /* '' */
+.icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
