--- a/task_manager/templates/task_manager/index.html
+++ b/task_manager/templates/task_manager/index.html
@@ -2,15 +2,15 @@
 
 {% block content %}
   {% if user.is_authenticated %}
-    <h1 class="text-center mb-3">500 Internal Server Error: {{ request.user.username }}!</h1>
-    <a class="btn mb-3 cs-scheduler btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Your Tasks</a>
-    <a class="btn mb-3 cs-scheduler btn-lg w-100" href="{% url 'task_manager:task-create' %}" role="button">Create Task</a>
+    <h1 class="text-center mb-3">Welcome {{ request.user.username }}!</h1>
+    <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Your Tasks</a>
+    <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-create' %}" role="button">Create Task</a>
     <h2 class="mb-3">Summary</h2>
     <p>You have {{ request.user.task_set.count }} tasks on-going</p>
   {% else %}
     <h1 class="text-center mb-3">Welcome to Scheduler!</h1>
     <p class="text-center">Your private task manager</p>
-    <a class="btn mb-3 cs-scheduler btn-lg w-100" href="{% url 'login' %}" role="button">Login to Start</a>
-    <a class="btn mb-3 cs-scheduler btn-lg w-100" href="{% url 'django_registration:user-create' %}" role="button">Register</a>
+    <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'login' %}" role="button">Login to Start</a>
+    <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'django_registration:user-create' %}" role="button">Register</a>
   {% endif %}
 {% endblock %}
