--- a/task_manager/templates/task_manager/task_detail.html
+++ b/task_manager/templates/task_manager/task_detail.html
@@ -1,17 +1,17 @@
 {% extends 'task_manager/base_generic.html' %}
 
 {% block content %}
-  <div class="jumbotron mb-3 p-2 cs-scheduler">
+  <div class="jumbotron mb-3 p-2 bg-scheduler c-scheduler-dark">
     <h1 class="display-4">{{ task.name }}</h1>
     <p class="lead">{{ task.description }}</p>
     <hr class="my-4">
     <p><strong>Due date:</strong> {{ task.due_date }}</p>
     <div class="d-flex mb-2 w-100 justify-content-between">
       <p><strong>Priority:</strong> <span class="{% if task.priority == 'h' %}text-warning{% elif task.priority == 'n' %}text-body{% else %}text-muted{% endif %}">{{ task.get_priority_display }}</span></p>
-      <a class="btn cs-scheduler-dark btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Edit</a>
+      <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Edit</a>
     </div>
     <div class="d-flex w-100 justify-content-between">
-      <a class="btn cs-scheduler-dark btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Mark done</a>
+      <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Mark done</a>
       <a class="btn btn-danger btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Delete</a>
     </div>
   </div>
