--- a/task_manager/templates/task_manager/task_list.html
+++ b/task_manager/templates/task_manager/task_list.html
@@ -4,7 +4,7 @@
   {% if task_list %}
     <div class="list-group">
       {% for task in task_list %}
-        <a class="list-group-item mb-3 bg-scheduler list-group-item-action" href="{{ task.get_absolute_url }}">
+        <a class="list-group-item mb-3 bg-scheduler c-scheduler-dark list-group-item-action" href="{{ task.get_absolute_url }}">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{ task.name }}</h5>
             <small>{{ task.due_date }}</small>
@@ -14,6 +14,7 @@
         </a>
       {% endfor %}
     </div>
+    <p class="h3">That's all! Would You mind add another <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:task-create' %}" role="button">Task</a> ?</p>
   {% else %}
     <p class="text-center">You haven't added any task yet</p>
   {% endif %}
