Editet site templates

--- a/scheduler/templates/registration/logged_out.html
+++ b/scheduler/templates/registration/logged_out.html
@@ -3,5 +3,5 @@
 {% block content %}
   <h1 class="text-center">Logged out!</h1>
   <p class="text-center my-4">We hope You will come back soon!</p>
-  <a class="btn mb-3 cs-scheduler btn-lg w-100" href="{% url 'task_manager:index' %}" role="button">Back to Home</a>
+  <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:index' %}" role="button">Back to Home</a>
 {% endblock %}
