--- a/task_manager/templates/task_manager/base_generic.html
+++ b/task_manager/templates/task_manager/base_generic.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6">
             <h1 class="h2 my-3">About creator</h1>
-            <p class="">I am Computer Science student at Lublin University of Technology who has started his first adventure with computers and programming in very youth years.</p>
+            <p class="">Computer Science student at Lublin University of Technology who has started his first adventure with computers and programming in very youth years.</p>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6">
             <h1 class="h2 my-3">Projects</h1>
