--- a/task_manager/templates/task_manager/task_form.html
+++ b/task_manager/templates/task_manager/task_form.html
@@ -9,6 +9,8 @@
         {{ field }}
       </div>
     {% endfor %}
-    <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Submit</button>
+    <div class="form-group">
+      <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Save</button>
+    </div>
   </form>
 {% endblock %}
