--- a/task_manager/templates/task_manager/index.html
+++ b/task_manager/templates/task_manager/index.html
@@ -5,8 +5,11 @@
     <h1 class="text-center mb-3">Welcome {{ request.user.username }}!</h1>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Your Tasks</a>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-create' %}" role="button">Create Task</a>
-    <h2 class="mb-3">Summary</h2>
-    <p>You have {{ request.user.task_set.count }} tasks on-going</p>
+    <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-list' %}" role="button">Your Shopping Lists</a>
+    <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-create' %}" role="button">Create Shopping List</a>
+    <h2 class="text-center mb-3">Summary</h2>
+    <p class="text-center">You have <strong>{{ request.user.task_set.count }}</strong> task{% if request.user.task_set.count != 1 %}s{% endif %} on-going</p>
+    <p class="text-center">You have <strong>{{ request.user.shoppinglist_set.count }}</strong> active shopping list{% if request.user.shoppinglist_set.count != 1 %}s{% endif %}</p>
   {% else %}
     <h1 class="text-center mb-3">Welcome to Scheduler!</h1>
     <p class="text-center">Your private task manager</p>
