--- a/task_manager/templates/task_manager/task_detail.html
+++ b/task_manager/templates/task_manager/task_detail.html
@@ -8,11 +8,11 @@
     <p><strong>Due date:</strong> {{ task.due_date }}</p>
     <div class="d-flex mb-2 w-100 justify-content-between">
       <p><strong>Priority:</strong> <span class="{% if task.priority == 'h' %}text-warning{% elif task.priority == 'n' %}text-body{% else %}text-muted{% endif %}">{{ task.get_priority_display }}</span></p>
-      <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Edit</a>
+      <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:task-update' task.pk %}" role="button">Edit</a>
     </div>
     <div class="d-flex w-100 justify-content-between">
       <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Mark done</a>
-      <a class="btn btn-danger btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Delete</a>
+      <a class="btn btn-danger btn-lg" href="{% url 'task_manager:task-delete' task.pk %}" role="button">Delete</a>
     </div>
   </div>
 {% endblock %}
