--- a/task_manager/templates/task_manager/task_detail.html
+++ b/task_manager/templates/task_manager/task_detail.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="jumbotron mb-3 p-2 bg-scheduler c-scheduler-dark">
     <h1 class="display-4">{{ task.name }}</h1>
+    <hr class="my-4">
     <p class="lead">{{ task.description }}</p>
     <hr class="my-4">
     <p><strong>Due date:</strong> {{ task.due_date }}</p>
