--- a/task_manager/templates/task_manager/shoppinglist_detail.html
+++ b/task_manager/templates/task_manager/shoppinglist_detail.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="jumbotron mb-3 p-2 bg-scheduler c-scheduler-dark">
     <h1 class="display-4">{{ shoppinglist.name }}</h1>
+    <hr class="my-4">
     {% if shoppinglist.shoppinglistitem_set.all.count >= 1 %}
       <ul>
         {% for item in shoppinglist.shoppinglistitem_set.all %}
@@ -14,12 +15,9 @@
     {% endif %}
     <hr class="my-4">
     <p><strong>Date added:</strong> {{ shoppinglist.date_added }}</p>
-    <div class="d-flex mb-2 w-100 justify-content-between">
-      <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Edit</a>
-    </div>
     <div class="d-flex w-100 justify-content-between">
-      <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Mark done</a>
-      <a class="btn btn-danger btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Delete</a>
+      <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:slist-update' shoppinglist.pk %}" role="button">Edit</a>
+      <a class="btn btn-danger btn-lg" href="{% url 'task_manager:slist-delete' shoppinglist.pk %}" role="button">Delete</a>
     </div>
   </div>
 {% endblock %}
