--- a/task_manager/templates/task_manager/shoppinglist_form.html
+++ b/task_manager/templates/task_manager/shoppinglist_form.html
@@ -1,5 +1,13 @@
 {% extends 'task_manager/base_generic.html' %}
 
 {% block content %}
-  {{ form }}
+  <form method="post">
+    {% csrf_token %}
+    <div class="form-group">
+      {{ form }}
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Save</button>
+    </div>
+  </form>
 {% endblock %}
