--- a/task_manager/templates/task_manager/shoppinglist_list.html
+++ b/task_manager/templates/task_manager/shoppinglist_list.html
@@ -24,8 +24,9 @@
         </a>
       {% endfor %}
     </div>
-    <p class="h3">That's all! Would You mind add another <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:inactive-yet' %}" role="button">Shopping List</a> ?</p>
+    <p class="h3">That's all! Would You mind add another <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:slist-create' %}" role="button">Shopping List</a> ?</p>
   {% else %}
     <p class="text-center">You haven't added any shopping list yet</p>
+    <p class="h3">Would You mind add your first <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:slist-create' %}" role="button">Shopping List</a> ?</p>
   {% endif %}
 {% endblock %}
