--- a/task_manager/templates/task_manager/base_generic.html
+++ b/task_manager/templates/task_manager/base_generic.html
@@ -43,9 +43,9 @@
                 <div class="dropdown-menu" aria-labelledby="submenu">
                   <a class="dropdown-item" href="{% url 'task_manager:task-create' %}">Create new</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'task_manager:inactive-yet' %}">Delete</a>
+                  <a class="dropdown-item disabled" href="{% url 'task_manager:inactive-yet' %}">Delete</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'task_manager:inactive-yet' %}">Mark done</a>
+                  <a class="dropdown-item disabled" href="{% url 'task_manager:inactive-yet' %}">Mark done</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -53,7 +53,7 @@
                 <div class="dropdown-menu" aria-labelledby="submenu">
                   <a class="dropdown-item" href="{% url 'task_manager:slist-create' %}">Create new</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'task_manager:inactive-yet' %}">Delete</a>
+                  <a class="dropdown-item disabled" href="{% url 'task_manager:inactive-yet' %}">Delete</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
