--- a/task_manager/templates/task_manager/inactive.html
+++ b/task_manager/templates/task_manager/inactive.html
@@ -1,5 +1,5 @@
 {% extends 'task_manager/base_generic.html' %}
 
 {% block content %}
-  <p class="text-center">This link is not active yet</p>
+  <p class="text-center">This link is not active yet.</p>
 {% endblock %}
