--- a/task_manager/templates/task_manager/task_detail.html
+++ b/task_manager/templates/task_manager/task_detail.html
@@ -12,7 +12,7 @@
       <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:task-update' task.pk %}" role="button">Edit</a>
     </div>
     <div class="d-flex w-100 justify-content-between">
-      <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:inactive-yet' %}" role="button">Mark done</a>
+      <a class="btn bg-scheduler-dark c-scheduler btn-lg disabled" href="{% url 'task_manager:inactive-yet' %}" role="button">Mark done</a>
       <a class="btn btn-danger btn-lg" href="{% url 'task_manager:task-delete' task.pk %}" role="button">Delete</a>
     </div>
   </div>
