Added divided forms for task due_date

--- a/task_manager/templates/task_manager/task_detail.html
+++ b/task_manager/templates/task_manager/task_detail.html
@@ -6,7 +6,7 @@
     <hr class="my-4">
     <p class="lead">{{ task.description }}</p>
     <hr class="my-4">
-    <p><strong>Due date:</strong> {{ task.due_date }}</p>
+    <p><strong>Due date:</strong> {{ task.due_date|date:'d-m-Y H:i' }}</p>
     <div class="d-flex mb-2 w-100 justify-content-between">
       <p><strong>Priority:</strong> <span class="{% if task.priority == 'h' %}text-warning{% elif task.priority == 'n' %}text-body{% else %}text-muted{% endif %}">{{ task.get_priority_display }}</span></p>
       <a class="btn bg-scheduler-dark c-scheduler btn-lg" href="{% url 'task_manager:task-update' task.pk %}" role="button">Edit</a>
