--- a/task_manager/templates/task_manager/task_form.html
+++ b/task_manager/templates/task_manager/task_form.html
@@ -3,12 +3,112 @@
 {% block content %}
   <form action="" method="post">
     {% csrf_token %}
-    {% for field in form %}
-      <div class="form-group">
-        {{ field.label_tag }}
-        {{ field }}
+    <div class="form-group">
+      {{ form.name.label_tag }}
+      {{ form.name }}
+      <small class="text-muted">{{ form.name.help_text }}</small>
+      {% for error in form.name.errors %}
+        <br><small class="text-danger">{{ error }}</small>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      {{ form.description.label_tag }}
+      {{ form.description }}
+      <small class="text-muted">{{ form.description.help_text }}</small>
+      {% for error in form.description.errors %}
+        <br><small class="text-danger">{{ error }}</small>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      {{ form.priority.label_tag }}
+      {{ form.priority }}
+      <small class="text-muted">{{ form.priority.help_text }}</small>
+      {% for error in form.priority.errors %}
+        <br><small class="text-danger">{{ error }}</small>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <h1 class="h4">Due date</h1>
+      <hr class="bg-scheduler-dark-2">
+      <div class="form-row">
+        <div class="col-4">
+          {{ form.year.label_tag }}
+          {{ form.year }}
+          <small class="text-muted">{{ form.year.help_text }}</small>
+          {% for error in form.year.errors %}
+            <br><small class="text-danger">{{ error }}</small>
+          {% endfor %}
+        </div>
+        <div class="col-5">
+          {{ form.month.label_tag }}
+          {{ form.month }}
+          <small class="text-muted">{{ form.month.help_text }}</small>
+          {% for error in form.month.errors %}
+            <br><small class="text-danger">{{ error }}</small>
+          {% endfor %}
+        </div>
+        <div class="col-3">
+          {{ form.day.label_tag }}
+          {{ form.day }}
+          <small class="text-muted">{{ form.day.help_text }}</small>
+          {% for error in form.day.errors %}
+            <br><small class="text-danger">{{ error }}</small>
+          {% endfor %}
+        </div>
       </div>
-    {% endfor %}
+      <div class="form-group">
+        <hr class="bg-scheduler-dark-2">
+        <div class="form-row">
+          <div class="col">
+            {{ form.hour.label_tag }}
+            {{ form.hour }}
+            <small class="text-muted">{{ form.hour.help_text }}</small>
+            {% for error in form.hour.errors %}
+              <br><small class="text-danger">{{ error }}</small>
+            {% endfor %}
+          </div>
+          <div class="col">
+            {{ form.minute.label_tag }}
+            {{ form.minute }}
+            <small class="text-muted">{{ form.minute.help_text }}</small>
+            {% for error in form.minute.errors %}
+              <br><small class="text-danger">{{ error }}</small>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+    </div>
+{#    <div class="form-group">#}
+{#      {{ form.name.label_tag }}#}
+{#      <input class="form-control bg-scheduler-dark" id="{{ form.name.if_for_label }}" type="text" name="{{ form.name.html_name }}" maxlength="100" required>#}
+{#      {% for error in form.name.errors %}#}
+{#        <small class="text-danger">{{ form.name.errors }}</small>#}
+{#      {% endfor %}#}
+{#    </div>#}
+{#    <div class="form-group">#}
+{#      {{ form.description.label_tag }}#}
+{#      <textarea class="form-control bg-scheduler-dark" id="{{ form.description.if_for_label }}" name="{{ form.description.html_name }}" maxlength="5000" cols="40" rows="10" required></textarea>#}
+{#      {% for error in form.description.errors %}#}
+{#        <small class="text-danger">{{ form.description.errors }}</small>#}
+{#      {% endfor %}#}
+{#    </div>#}
+{#    <div class="form-group">#}
+{#      {{ form.priority.label_tag }}#}
+{#      <input class="form-control bg-scheduler-dark" id="{{ form.priority.if_for_label }}" type="text" name="{{ form.priority.html_name }}" maxlength="100" required>#}
+{#      {% for error in form.name.errors %}#}
+{#        <small class="text-danger">{{ form.name.errors }}</small>#}
+{#      {% endfor %}#}
+{#    </div>#}
+{#    {% for field in form %}#}
+{#      <div class="form-group">#}
+{#        {{ field.label_tag }}#}
+{#        {{ field }}#}
+{#        <small class="text-muted">{{ field.help_text }}</small>#}
+{#        {% for error in field.errors %}#}
+{#          <br><small class="text-danger">{{ error }}</small>#}
+{#        {% endfor %}#}
+{#      </div>#}
+{#    {% endfor %}#}
     <div class="form-group">
       <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Save</button>
     </div>
