--- a/task_manager/templates/task_manager/task_list.html
+++ b/task_manager/templates/task_manager/task_list.html
@@ -7,7 +7,7 @@
         <a class="list-group-item mb-3 bg-scheduler c-scheduler-dark list-group-item-action" href="{{ task.get_absolute_url }}">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{ task.name }}</h5>
-            <small>{{ task.due_date }}</small>
+            <small>{{ task.due_date|date:'d-m-Y H:i' }}</small>
           </div>
           <p class="mb-1">{{ task.description }}</p>
           <small class="{% if task.priority == 'h' %}text-warning{% elif task.priority == 'n' %}text-body{% else %}text-muted{% endif %}">{{ task.get_priority_display }}</small>
