--- a/task_manager/templates/task_manager/shoppinglist_list.html
+++ b/task_manager/templates/task_manager/shoppinglist_list.html
@@ -7,7 +7,7 @@
         <a class="list-group-item mb-3 bg-scheduler c-scheduler-dark list-group-item-action" href="{{ slist.get_absolute_url }}">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{ slist.name }}</h5>
-            <small>{{ slist.date_added }}</small>
+            <small>{{ slist.date_added|date:'d M Y H:i' }}</small>
           </div>
           {% if not slist.shoppinglistitem_set.first.status %}
             <small class="mb-0 text-body">
@@ -24,7 +24,7 @@
         </a>
       {% endfor %}
     </div>
-    <p class="h3">That's all! Would You mind add another <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:slist-create' %}" role="button">Shopping List</a> ?</p>
+    <p class="h4">That's all! Would You mind add another <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:slist-create' %}" role="button">Shopping List</a> ?</p>
   {% else %}
     <p class="text-center">You haven't added any shopping list yet</p>
     <p class="h3">Would You mind add your first <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:slist-create' %}" role="button">Shopping List</a> ?</p>
