--- a/task_manager/templates/task_manager/task_confirm_delete.html
+++ b/task_manager/templates/task_manager/task_confirm_delete.html
@@ -2,9 +2,9 @@
 
 {% block content %}
   <h1>Delete Task</h1>
-  <p>Are you sure you want to delete the task: {{ task }}?</p>
-  <form action="" method="POST">
+  <p>Are you sure you want to delete the task: <strong class="text-success">{{ task }}</strong>?</p>
+  <form method="POST">
     {% csrf_token %}
-    <input type="submit" value="Yes, delete.">
+    <button type="submit" class="btn btn-danger">Yes, delete</button>
   </form>
 {% endblock %}
