--- a/task_manager/templates/task_manager/task_list.html
+++ b/task_manager/templates/task_manager/task_list.html
@@ -7,14 +7,14 @@
         <a class="list-group-item mb-3 bg-scheduler c-scheduler-dark list-group-item-action" href="{{ task.get_absolute_url }}">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{ task.name }}</h5>
-            <small>{{ task.due_date|date:'d-m-Y H:i' }}</small>
+            <small>{{ task.due_date|date:'d M Y H:i' }}</small>
           </div>
           <p class="mb-1">{{ task.description }}</p>
           <small class="{% if task.priority == 'h' %}text-warning{% elif task.priority == 'n' %}text-body{% else %}text-muted{% endif %}">{{ task.get_priority_display }}</small>
         </a>
       {% endfor %}
     </div>
-    <p class="h3">That's all! Would You mind add another <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:task-create' %}" role="button">Task</a> ?</p>
+    <p class="h4">That's all! Would You mind add another <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:task-create' %}" role="button">Task</a> ?</p>
   {% else %}
     <p class="text-center">You haven't added any task yet</p>
     <p class="h3">Would You mind add your first <a class="btn bg-scheduler c-scheduler-dark btn-sm" href="{% url 'task_manager:task-create' %}" role="button">Task</a> ?</p>
