--- a/task_manager/static/task_manager/css/main.css
+++ b/task_manager/static/task_manager/css/main.css
@@ -62,6 +62,12 @@ textarea {
 .c-scheduler-dark {
     color: #424240 !important;
 }
+.c-scheduler-light {
+    color: #adadad !important;
+}
+.c-scheduler-white {
+    color: white !important;
+}
 
 
 
@@ -80,4 +86,7 @@ textarea {
 }
 .bg-scheduler-2 {
     background-color: #8c8c8c !important;
+}
+.bg-scheduler-high {
+    background-color: yellow !important;
 }
